HOCS-4383: Create a CaseDataTypeService and point code at it